--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -39,26 +39,63 @@
 
 		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="60dp"
+			android:layout_height="75dp"
 			android:orientation="horizontal">
 
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="8dp"
-				android:text="電話號碼:"
-				android:textSize="16sp"
-				android:textStyle="bold" />
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="vertical">
 
-			<TextView
-				android:id="@+id/tvContactTel"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="8dp"
-				android:text=""
-				android:textColor="#000"
-				android:textSize="16sp"
-				android:textStyle="bold" />
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginBottom="8dp"
+					android:text="電話號碼:"
+					android:textSize="16sp"
+					android:textStyle="bold" />
+
+				<TextView
+					android:id="@+id/tvContactTel"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginBottom="8dp"
+					android:text=""
+					android:textColor="#000"
+					android:textSize="16sp"
+					android:textStyle="bold" />
+			</LinearLayout>
+
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="75dp"
+			android:orientation="horizontal">
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="vertical">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginBottom="8dp"
+					android:text="連絡人郵箱:"
+					android:textSize="16sp"
+					android:textStyle="bold" />
+
+				<TextView
+					android:id="@+id/tvContactMail"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginBottom="8dp"
+					android:text=""
+					android:textColor="#000"
+					android:textSize="16sp"
+					android:textStyle="bold" />
+			</LinearLayout>
 
 		</LinearLayout>
 
@@ -94,19 +131,22 @@
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
+		android:layout_marginTop="20dp"
 		android:orientation="vertical">
 
 		<Button
 			android:id="@+id/btnEditContact"
 			android:layout_width="wrap_content"
-			android:layout_height="90dp"
-			android:text="編輯" />
+			android:layout_height="100dp"
+			android:text="編輯"
+			tools:ignore="HardcodedText" />
 
 		<Button
 			android:id="@+id/btnDeleteContact"
 			android:layout_width="wrap_content"
-			android:layout_height="90dp"
-			android:text="刪除" />
+			android:layout_height="100dp"
+			android:text="刪除"
+			tools:ignore="HardcodedText" />
 	</LinearLayout>
 
 </LinearLayout>
