--- a/app/src/main/res/layout/fragment_calender_thing.xml
+++ b/app/src/main/res/layout/fragment_calender_thing.xml
@@ -11,22 +11,15 @@
 		android:layout_height="wrap_content"
 		tools:context=".ui.Calender.CalenderThingFragment">
 
-		<TextView
-			android:id="@+id/textView_calender_thing"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginEnd="28dp"
-			android:text="@string/calender_thing"
-			android:textSize="50sp"
-			app:layout_constraintEnd_toEndOf="parent"
-			tools:ignore="HardcodedText,MissingConstraints"/>
 
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_marginTop="60dp"
 			android:orientation="vertical"
 			android:padding="16dp"
-			app:layout_constraintTop_toBottomOf="@id/textView_calender_thing">
+			app:layout_constraintTop_toTopOf="parent"
+			tools:ignore="MissingConstraints">
 
 			<EditText
 				android:id="@+id/editText_thing"
