--- a/app/src/main/res/layout/fragment_emergency_contact.xml
+++ b/app/src/main/res/layout/fragment_emergency_contact.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".ui.emergency.emergency_contact">
@@ -8,19 +10,12 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginTop="60dp"
 		android:orientation="vertical"
 		android:padding="16dp"
+		app:layout_constraintTop_toTopOf="parent"
 		tools:ignore="UselessParent">
 
-		<TextView
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="新增緊急連絡人"
-			android:textSize="45sp"
-			android:textStyle="bold"
-			android:gravity="center"
-			android:layout_marginBottom="16dp"
-			tools:ignore="HardcodedText" />
 
 		<ImageView
 			android:id="@+id/image_emergency"
@@ -95,7 +90,7 @@
 				android:layout_height="wrap_content"
 				android:textSize="20sp"
 				android:hint="請輸入電子信箱"
-				android:imeOptions="actionNext"
+				android:imeOptions="actionSend"
 				android:inputType="textEmailAddress"
 				tools:ignore="Autofill,HardcodedText,TextFields" />
 		</LinearLayout>
