--- a/app/src/main/res/layout/fragment_guided_tour.xml
+++ b/app/src/main/res/layout/fragment_guided_tour.xml
@@ -43,7 +43,6 @@
 					android:layout_marginBottom="24dp"
 					android:src="@drawable/guided_0"
 					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
-
 				<TextView
 					android:id="@+id/textView3"
 					android:layout_width="match_parent"
@@ -51,7 +50,6 @@
 					android:text="@string/guided_2"
 					android:textSize="25sp"
 					tools:ignore="HardcodedText" />
-
 				<ImageView
 					android:id="@+id/image_menu"
 					android:layout_width="380dp"
@@ -60,7 +58,6 @@
 					android:layout_marginBottom="24dp"
 					android:src="@drawable/guided_1"
 					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
-
 				<TextView
 					android:id="@+id/textView4"
 					android:layout_width="match_parent"
@@ -68,7 +65,6 @@
 					android:text="@string/guided_3"
 					android:textSize="25sp"
 					tools:ignore="HardcodedText" />
-
 				<ImageView
 					android:id="@+id/image_login"
 					android:layout_width="380dp"
@@ -77,7 +73,6 @@
 					android:layout_marginBottom="24dp"
 					android:src="@drawable/guided_2"
 					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
-
 				<TextView
 					android:id="@+id/textView5"
 					android:layout_width="match_parent"
@@ -85,16 +80,14 @@
 					android:text="@string/guided_4"
 					android:textSize="25sp"
 					tools:ignore="HardcodedText" />
-
 				<ImageView
-					android:id="@+id/image_medicine_box"
+					android:id="@+id/image_registration"
 					android:layout_width="380dp"
 					android:layout_height="700dp"
 					android:layout_centerHorizontal="true"
 					android:layout_marginBottom="24dp"
-					android:src="@drawable/guided_2"
+					android:src="@drawable/guided_3"
 					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
-
 				<TextView
 					android:id="@+id/textView6"
 					android:layout_width="match_parent"
@@ -102,34 +95,6 @@
 					android:text="@string/guided_5"
 					android:textSize="25sp"
 					tools:ignore="HardcodedText" />
-
-				<ImageView
-					android:id="@+id/image_medicine"
-					android:layout_width="380dp"
-					android:layout_height="700dp"
-					android:layout_centerHorizontal="true"
-					android:layout_marginBottom="24dp"
-					android:src="@drawable/guided_6"
-					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
-
-
-
-				<TextView
-					android:id="@+id/textView7"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:text="@string/guided_6"
-					android:textSize="25sp"
-					tools:ignore="HardcodedText" />
-
-				<TextView
-					android:id="@+id/textView8"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:text="@string/guided_7"
-					android:textSize="25sp"
-					tools:ignore="HardcodedText" />
-
 				<ImageView
 					android:id="@+id/image_calender"
 					android:layout_width="380dp"
@@ -138,16 +103,36 @@
 					android:layout_marginBottom="24dp"
 					android:src="@drawable/guided_4"
 					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
-
+				<TextView
+					android:id="@+id/textView7"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_6"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
 				<ImageView
 					android:id="@+id/image_calender_thing"
 					android:layout_width="380dp"
 					android:layout_height="700dp"
 					android:layout_centerHorizontal="true"
 					android:layout_marginBottom="24dp"
-					android:src="@drawable/guided_3"
+					android:src="@drawable/guided_5"
 					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
-
+				<TextView
+					android:id="@+id/textView8"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_7"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+				<ImageView
+					android:id="@+id/image_medicine"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_7"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
 				<TextView
 					android:id="@+id/textView9"
 					android:layout_width="match_parent"
@@ -155,14 +140,73 @@
 					android:text="@string/guided_8"
 					android:textSize="25sp"
 					tools:ignore="HardcodedText" />
-
 				<ImageView
-					android:id="@+id/image_user"
+					android:id="@+id/image_medicine_allbox"
 					android:layout_width="380dp"
 					android:layout_height="700dp"
 					android:layout_centerHorizontal="true"
 					android:layout_marginBottom="24dp"
-					android:src="@drawable/guided_5"
+					android:src="@drawable/guided_8"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+				<TextView
+					android:id="@+id/textView10"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_9"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+				<ImageView
+					android:id="@+id/image_medicine_box"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_9"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+				<TextView
+					android:id="@+id/textView11"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_10"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+				<ImageView
+					android:id="@+id/image_forget_password"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_10"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+				<TextView
+					android:id="@+id/textView12"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_11"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+				<ImageView
+					android:id="@+id/image_set"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_12"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+				<TextView
+					android:id="@+id/textView13"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_13"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+				<ImageView
+					android:id="@+id/image_feedback"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_11"
 					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
 
 			</LinearLayout>
